cmd/kyc-management/k8s/02-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-kyc-management-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/kyc-management
