cmd/kyc-management/k8s/01-kyc-management.yaml
	apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-management
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kyc-management
  template:
    metadata:
      labels:
        app: kyc-management
    spec:
      containers:
      - name: kyc-management
        image: entropypool/kyc-management:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kyc-management
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 50120
    targetPort: 50120
  - name: grpc
    port: 50121
    targetPort: 50121
  - name: prometheus
    port: 50122
    targetPort: 50122
  selector:
    app: kyc-management
