cmd/kyc-management/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kyc-management-traefik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kyc-management-traefik
    k8s.kuboard.cn/workload: kyc-management-traefik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-kyc-management-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/kyc-management/version
            backend:
              serviceName: kyc-management
              servicePort: 50120
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-kyc-management-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/kyc-management
