cmd/kyc-management/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kyc-management-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kyc-management-traefik-app-user
    k8s.kuboard.cn/workload: kyc-management-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-kyc-management-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/kyc-management/v1/upload/kyc/image
            backend:
              serviceName: kyc-management
              servicePort: 50120
          - path: /api/kyc-management/v1/get/kyc/image
            backend:
              serviceName: kyc-management
              servicePort: 50120
          - path: /api/kyc-management/v1/get/kyc/by/userid
            backend:
              serviceName: kyc-management
              servicePort: 50120
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kyc-management-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: kyc-management-traefik-app
    k8s.kuboard.cn/workload: kyc-management-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-kyc-management-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/kyc-management/version
            backend:
              serviceName: kyc-management
              servicePort: 50120
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
